<resources>
    <string name="app_name">Debt</string>
    <string name="Novareceita">Nova receita</string>
    <string name="Novadespesa">Nova despesa</string>
    <string name="Despesarecorrente">Despesa recorrente</string>
    <string name="Despesapaga">Despesa paga</string>
    <string name="Nome">Nome</string>
    <string name="Valor">Valor</string>
    <string name="Datadopagamento">Data do pagamento</string>
    <string name="ParcelasDica">Parcelas (05/12X)</string>
    <string name="Observacoes">Observações</string>
    <string name="Editandodespesa">Editando despesa</string>
    <string name="Editandoreceita">Editando receita</string>
    <string name="OK">OK</string>
    <string name="Verifiqueainformacaoinserida">Verifique a informação inserida</string>
    <string name="Xjaestaregistradaemy">{0} Já está registrada em {1}</string>
    <string name="Despesarecorrenteparcelada">Despesa recorrente/parcelada</string>
    <string name="Ondedesejaaplicarasmodificacoes">Onde deseja aplicar as modificações ?</string>
    <string name="Recebida">Recebida</string>
    <string name="Datadeentrada">Data de entrada</string>
    <string name="Importar_ate">Auto-importar até</string>
    <string name="Recorrente">Recorrente</string>
    <string name="Receitarecorrenteparcelada">Receita recorrente/auto-importada</string>
    <string name="Concluir">Concluir</string>
    <string name="Novacategoria">Nova categoria</string>
    <string name="Porfavorconfirme">Por favor confirme</string>
    <string name="Desejamesmoremoverestacategoria">Deseja mesmo remover esta categoria?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Remover">Remover</string>
    <string name="Estacategoriaestaemusoportantonaopodeserremovida">Esta categoria está em uso, portanto, não pode ser removida</string>
    <string name="Voceprecisaselecionarumacategoriaparaadespesa">Você precisa selecionar uma categoria para a despesa</string>
    <string name="Variacaodareceita">Variação da receita</string>
    <string name="Dadossobreomes">Dados sobre o mês</string>
    <string name="Despesatotal">Despesa total</string>
    <string name="Receitatotal">Receita total</string>
    <string name="Despesasemaberto">Despesas em aberto</string>
    <string name="Reeceitarecebida">Receita recebida</string>
    <string name="DespesasdeX">Despesas de {0}</string>
    <string name="ReceitasdeX">Receitas de {0}</string>
    <string name="Pago">Pago</string>
    <string name="Desejamesmoremoverestadespesa">Deseja mesmo remover esta despesa?</string>
    <string name="Emaberto">Em aberto</string>
    <string name="compras">Compras</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="educacao">Educação</string>
    <string name="alimentacao">Alimentação</string>
    <string name="transporte">Transporte</string>
    <string name="saude">Saúde</string>
    <string name="lazer">Lazer</string>
    <string name="moradia">Moradia</string>
    <string name="Deondedesejaremoveradespesa">De onde deseja remover a despesa ?</string>
    <string name="Xemdiante">{0} em diante</string>
    <string name="Deondedesejaremoverareceita">De onde deseja remover a receita</string>
    <string name="Pendente">Pendente</string>
    <string name="Desejamesmoremoverestareceita">Deseja mesmo remover esta receita?</string>
    <string name="Balancododia">Seu saldo atual</string>
    <string name="Notasdomes">Notas do mês</string>
    <string name="Novanota">Nova nota</string>
    <string name="Titulo">Título</string>
    <string name="Detalhes">Detalhes</string>
    <string name="Concluido">Concluido</string>
    <string name="Desejamesmoremoverestanota">Deseja mesmo remover esta nota?</string>
    <string name="Desejamesmoremoverestaconta">Deseja mesmo remover esta conta?</string>
    <string name="Desejamesmoremoveresteobjetivo">Deseja mesmo remover este objetivo?</string>
    <string name="Proximasdespesas">Próximas despesas</string>
    <string name="Verdespesas">Ver despesas</string>
    <string name="Verreceitas">Ver receitas</string>
    <string name="Vercategorias">Ver categorias</string>
    <string name="Trocardemes">Trocar de mês</string>
    <string name="Vocetemxdespesaspendentes">Você tem {0} despesa(s) pendente(s)</string>
    <string name="Despesasparaosproxdias">{0} despesa(s) para os próx dias</string>
    <string name="xDespesasvencemhoje">%1$d despesa(s) vence(m) hoje</string>
    <string name="Relatoriododia">Relatótio do dia</string>
    <string name="Atualizeoappcomasmodificacoesfeitashoje">Atualize o app com as modificações feitas hoje</string>
    <string name="Removendodefinitivamente">Removendo Definitivamente</string>
    <string name="Atualizando">Atualizando</string>
    <string name="Adicionando">Adicionando</string>
    <string name="Livesincfalhou">LiveSinc falhou</string>
    <string name="Sincronizar">Sincronizar</string>
    <string name="Enviando">Enviando</string>
    <string name="Sincronismofalhou">Sincronismo falhou</string>
    <string name="Sincronismoconcluidopodesernecessarioreiniciar">Sincronismo concluido, pode ser necessário reiniciar o app</string>
    <string name="Exportarrelatorio">Exportar relatório</string>
    <string name="Inicio">Inicio</string>
    <string name="Fim">Fim</string>
    <string name="Selecioneumintervalo">Selecione um intervalo</string>
    <string name="Verifiqueointervaloetentenovamente">Verifique o intervalo e tente novamente</string>
    <string name="Jaexisteumacategoriacomessenome">Já existe uma categoria com esse nome</string>
    <string name="Estaversaodoidesativadapelo">Esta versão foi desativada pelo desenvolvedor, atualize o app a partir da playstore.</string>
    <string name="Atualizeoapp">Atualize o App</string>
    <string name="Irparaplaystore">Ir para playstore</string>
    <string name="Umanovaversaoestadisponivel">Uma nova versão do app está disponível para download</string>
    <string name="Naohaconexaocomainternet">Não há conexão com a internet</string>
    <string name="Sincronismofalhoutente">O Sincronismo falhou, tente novamente.</string>
    <string name="Restaurandodados">Restaurando seus dados</string>
    <string name="Falha">Falha</string>
    <string name="Enviar">Enviar</string>
    <string name="Oappsofreuumafalhagraveeaopode">O app sofreu uma falha grave e não pôde continuar sua execução, por favor envie os dados do erro para que o mesmo possa ser solucionado.</string>
    <string name="Enviandorelatorio">Enviando relatório</string>
    <string name="Obrigado">Obrigado</string>
    <string name="Suspenderanuncios">Suspender anúncios</string>
    <string name="Apoiardesenvolvimento">Apoiar desenvolvimento</string>
    <string name="Houveumerroaocarregaroanuncioobrigado">Houve um erro ao carregar o anúncio. Obrigado mesmo assim!</string>
    <string name="Houveumerroaocarregaroanunciotentenovamente">Houve um erro ao carregar o anúncio. Tente novamente em alguns instantes</string>
    <string name="Houveumerroaoexibiroanuncioobrigado">Houve um erro ao exibir o anúncio. Obrigado mesmo assim!</string>
    <string name="Houveumerroaoexibiroanunciotentenovamente">Houve um erro ao exibir o anúncio. Tente novamente em alguns instantes</string>
    <string name="Obrigadopeloapoio">Obrigado pelo apoio</string>
    <string name="Paracontribuircomodesenvolvimento">Para contribuir com o desenvolvimento do app você deve assistir o anúncio até o final</string>
    <string name="Voceprecisaassistiroanuncioateofinalparaganhar">Você precisa assistir o anúncio até o final para ser recompensado</string>
    <string name="Osanunciosestaosuspensosnosproximos">Os anúncios estão suspensos nos próximos {0} dias</string>
    <string name="Backup">Backup</string>
    <string name="Backuperestauracao">Backup e Restauração</string>
    <string name="Faze_backup">Fazer backup</string>
    <string name="Osbackupsficamarmazenadosnapastadedocumentosdoseudispositivo">Os backups ficam armazenados na pasta de documentos do seu dispositivo</string>
    <string name="livesinc">LiveSinc</string>
    <string name="Sincronizaragora">Sincronizar agora</string>
    <string name="Vocenaoestaconectadoainternetouadata">Você não está conectado à internet ou a data do dispositivo está incorreta</string>
    <string name="Houveumerroaoautenticarsuacontatente">Houve um erro ao autenticar sua conta, tente novamente. Causa: {0}</string>
    <string name="BemvindoX">Bem-vindo {0}</string>
    <string name="Hamaisdeumprocessodeloginemandamentoquantas">Há mais de um processo de login em andamento. Quantas vezes você apertou esse botão?</string>
    <string name="Ologinfalhou">O login falhou. Código: {0}</string>
    <string name="Vocecancelouologin">Você cancelou o login</string>
    <string name="Houveumerroaocontactaraapidogoole">Houve um erro ao contactar a API do Google, verfique sua conexão e tente reiniciar o app.  Código: {0}</string>
    <string name="Naofoipossivelcarregarostermosdeuso">Não foi possível carregar os termos de uso. Tente novamente</string>
    <string name="Perfil">Perfil</string>
    <string name="Sair">Sair</string>
    <string name="Convidar">Convidar</string>
    <string name="Enviarconvite">Enviar solicitação</string>
    <string name="Aosairtodososseusdadosserao">Ao sair todos os seus dados serão apagados do dispositivo.</string>
    <string name="Naofoipossivelsair">Não foi possível sair, tente novamente.</string>
    <string name="Tentarnovamente">Tentar novamente</string>
    <string name="Abraoappparafazerlogin">Abra o app para fazer login</string>
    <string name="Verificar">Verificar</string>
    <string name="Email">Email</string>
    <string name="Digiteoenderecodeemaiparaquemdesejaenviarasolicitacao">Digite o endereço de email para quem deseja enviar a solicitação</string>
    <string name="Naofoipossivelconcluiraoperacao">Não foi possível concluir a operação</string>
    <string name="Errox">Erro: {0}</string>
    <string name="Solicitacaoenviadacomsucesso">Solicitação enviada com sucesso</string>
    <string name="Usuarionaoencontrado">Usuario não encontrado</string>
    <string name="Aceitar">Aceitar</string>
    <string name="Sexaceitarasolicitacaoseusdados"><![CDATA[Se<font color=#8000FF><b> {0} </b></font>aceitar a solicitação, seus dados e os dele serão movidos para o mesmo banco de dados e vocês terão acesso irrestrito aos dados uns dos outros, <font color=#8000FF> <b>certifique-se de que está convidando a pessoa certa</b></font>, <b>uma vez enviada a solicitação não pode ser cancelada.</b>]]></string>
    <string name="Aoaceitarasolicitacaodexseusdadosse"><![CDATA[Ao aceitar a solicitação de <font color=#8000FF><b>%1$s</font></b> seus dados serão mesclados e ambos terão acesso aos dados uns dos outros. <br><br><b> <font color=#E91E63>Só aceite solicitações de possoas de sua confiança.</font></b></br></br><br><br><b>Lembre-se a responsabilidade pelos seus dados é só sua.</b></br></br>]]></string>
    <string name="Aoaceitarasolicitacaodexvocedeixara"><![CDATA[Ao aceitar a solicitação de <font color=#8000FF><b>%1$s</font></b> você deixará de sincronizar com  <font color=#8000FF><b>%2$s</font></b><br>deseja mesmo prosseguir?</br>]]></string>
    <string name="Vocenaopodesincronizarcomxporqueesteemailjaestasincronizandocomoutraconta"><![CDATA[Você não pode sincronizar com <font color=#8000FF><b>%1$s</b></font> porque este email já está sincronizando com outra conta.<br><br>No sincronismo de contas, <b>uma pessoa convida outras pessoas</b> de forma que todos sincronizem com um usuário em comum.<br><br>O encadeamento de contas <b>(uma pessoa convida outra, que convida outra, que convida outra… sucessivamente)</b> não é permitido]]></string>
    <string name="Importardonubank">Importar do nubank</string>
    <string name="Vercontas">Ver contas</string>
    <string name="exportar_intervalo">Exportar intervalo</string>
    <string name="exportar_tudo">Exportar tudo</string>
</resources>