<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_edittext_contorno"
            android:drawableStart="@drawable/vec_observacoes"
            android:drawablePadding="16dp"
            android:ems="10"

            android:gravity="start|center_vertical"
            android:hint="@string/Nome"
            android:imeOptions="normal|actionNext"
            android:inputType="textCapSentences"
            android:maxLength="3000"
            android:maxLines="60"
            android:padding="16dp"
            android:textAlignment="gravity" />

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:inputType="numberDecimal|textNoSuggestions"
            android:background="@drawable/back_edittext_contorno"
            android:drawableStart="@drawable/vec_valor"
            android:drawablePadding="16dp"
            android:gravity="start|center_vertical"
            android:hint="@string/Valor"
            android:imeOptions="actionDone"
            android:maxLength="15"
            android:maxLines="1"
            android:minLines="1"
            android:padding="16dp"
            android:textAlignment="gravity" />

        <Switch
            android:id="@+id/sConcluido"
            fontPath="ProductSansBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/Concluido"
            android:textColor="?colorPrimary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>